--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
